# shared/openapi.json
@@ -1059,6 +1059,17 @@
           "title": {
             "title": "Title",
             "type": "string"
+          },
+          "username": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Username"
           }
         },
         "required": [
